# plugin-system-example

./: README.md
my-interface/: Cargo.toml
my-interface/src/: lib.rs
my-master/: Cargo.toml
my-master/src/: main.rs
my-plugin/: Cargo.toml
my-plugin/src/: lib.rs
