[package]
name = "my-interface"
version = "0.1.0"
authors = ["luojia65 <me@luojia.cc>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0"
pin-project-lite = "0.2"
tokio = {version= "1",features=["rt"]}
