[package]
name = "my-plugin"
version = "0.1.0"
authors = ["luojia65 <me@luojia.cc>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-interface = { path = "../my-interface", version = "*" }
rand = "*"
async-trait = "0"
tokio = { version= "1", features = ["rt","time"]}

[lib]
name = "my_plugin"
crate-type = ["dylib"] 
